Disable forum PVC in Helm values

--- a/deploy/philo-news-values.yaml
+++ b/deploy/philo-news-values.yaml
@@ -40,10 +40,7 @@ args:
   - "8000"
 
 persistence:
-  enabled: true
-  mountPath: /data
-  size: 1Gi
-  existingClaim: forum-web-app-data
+  enabled: false
 
 nginx:
   enabled: true
