Make password hash iterations configurable

--- a/deploy/philo-news-values.yaml
+++ b/deploy/philo-news-values.yaml
@@ -28,6 +28,8 @@ env:
       secretKeyRef:
         name: forum-postgres
         key: POSTGRES_PASSWORD
+  - name: PASSWORD_HASHER_ITERATIONS
+    value: "260000"
 
 command:
   - /app/entrypoint.sh
