--- a/deploy/philo-news-values.yaml
+++ b/deploy/philo-news-values.yaml
@@ -29,15 +29,15 @@ env:
         name: forum-postgres
         key: POSTGRES_PASSWORD
   - name: PASSWORD_HASHER_ITERATIONS
-    value: "150000"
+    value: "60000"
 
 resources:
   requests:
-    cpu: 250m
-    memory: 256Mi
-  limits:
     cpu: 500m
     memory: 512Mi
+  limits:
+    cpu: "1"
+    memory: 1Gi
 
 command:
   - /app/entrypoint.sh
