--- a/deploy/philo-news-values.yaml
+++ b/deploy/philo-news-values.yaml
@@ -62,7 +62,7 @@ nginx:
       location /static/ {
         alias /usr/share/nginx/html/static/;
         access_log off;
-        expires 1h;
+        expires 5m;
       }
       location / {
         proxy_pass http://127.0.0.1:8000;
